--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,3 @@
 <div class="image">
-<a href="/"><img src="<%=@response["images"]["fixed_height"]["url"] %>"/></a>
+<a href="/"><img src="<%=@response %>"/></a>
 </div>
