Fixed error when no GIF is found

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Hello, Rails!</h1>
-<%= link_to 'Giphy Time', controller: 'homes' %>
+<% content_for :title, "Giphy My Backround" %>
+<h1>Giphy My Background</h1>
+
+<h3><%= link_to 'Giphy Time', controller: 'homes' %></h3>
+
+<p>Simple fun app that creates full screen GIFs for your own pleasure</p>
+<p>Once you link the link above you can view a GIF. If you get tired of seeing it, just click anywhere on the page to load up another randomly selected GIF</p>
