--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "#{@random_word.capitalize}" %>
 <div class="image">
 <a href="/homes"><img src="<%=@response %>"/></a>
 </div>
