--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,10 @@
 <% content_for :title, "Giphy My Backround" %>
 <h1>Giphy My Background</h1>
 
-<h3><%= link_to 'Giphy Time', controller: 'homes' %></h3>
+<h2><strong><%= link_to 'Giphy Time', controller: 'homes' %></strong></h2>
 
-<p>Simple fun app that creates full screen GIFs for your own pleasure</p>
-<p>Once you link the link above you can view a GIF. If you get tired of seeing it, just click anywhere on the page to load up another randomly selected GIF</p>
+<p>Simple app that created to teach me about API's. Hope you enjoy!</p>
+
+<p>Once you click the link above you can view a GIF. If you get tired of it, just click anywhere on the page to load up another randomly selected GIF.</p>
+
+
